--- a/Web/GreenCap.Web/Views/Forum/All.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/All.cshtml
@@ -6,20 +6,18 @@
 
 @foreach (var post in Model.Posts)
 {
-<span id="likesValue_@(post.Id)">@post.Likes</span>
-<span id="disslikesValue_@(post.Id)">@post.DissLikes</span>
-                                <br />
-                                                <div class="card text-white bg-secondary active">
-                                                    <div class="card-header" id="@post.Id">
-                                                        @post.CreatorName posted on @post.PostedOn
-                                                        <button type="button" class="btn btn-danger  fas fa-thumbs-down float-right p-xl-2" data-vote="0"><span id="disslikesValue_@(post.Id)">@post.DissLikes</span></button>
-                                                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2" data-vote="1"><span id="likesValue_@(post.Id)">@post.Likes</span></button>
-                                                    </div>
-                                                    <div class="card-body">
-                                                        <h3 class="card-title">@post.ProblemTitle</h3>
-                                                        <p class="card-text">@post.Description</p>
-                                                    </div>
-                                                </div>}
+    <br />
+                    <div class="card text-white bg-secondary active">
+                        <div class="card-header" id="@post.Id">
+                            @post.CreatorName posted on @post.PostedOn
+                            <button type="button" class="btn btn-danger  fas fa-thumbs-down float-right p-xl-2" data-vote="0"><span id="disslikesValue_@(post.Id)">@post.DissLikes</span></button>
+                            <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2" data-vote="1"><span id="likesValue_@(post.Id)">@post.Likes</span></button>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">@post.ProblemTitle</h3>
+                            <p class="card-text">@post.Description</p>
+                        </div>
+                    </div>}
 
 <partial name="_PagingPartial" model="@Model" />
 
@@ -43,9 +41,8 @@
                         'X-CSRF-TOKEN': antiForgeryToken
                     },
                     success: function (data) {
-                        console.log($('#disslikesValue_' + postId).html(data.DissLikes));
-                        $('#disslikesValue_' + postId).html(data.DissLikes);
-                        $('#likesValue_' + postId).html(data.Likes);
+                        $('#disslikesValue_' + postId).html(data.dissLikes);
+                        $('#likesValue_' + postId).html(data.likes);
                     },
                     contentType: 'application/json',
                 });
