--- a/Web/GreenCap.Web/Views/Home/Index.cshtml
+++ b/Web/GreenCap.Web/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
     <hr class="my-4">
     <p class="text-muted">Prepare yourself to join our family and to become even more environmental friendly than before. You can share your creative ideas or to discuss a problem in the forum. It's up to you!</p>
     <p class="lead">
-        <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-info btn-lg" asp-controller="News" asp-action="All" role="button">Check latest news!</a>
     </p>
 
     <figure class="highcharts-figure">
