--- a/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     @if (this.SignInManager.IsSignedIn(this.User))
     {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Profile</a> <!--(this.User.Identity.Name)-->
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fas fa-user-tie"></i>&nbsp;Profile</a> <!--(this.User.Identity.Name)-->
     </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
@@ -18,7 +18,7 @@
         }
         <li class="nav-item">
             <form class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>               
             </form>
         </li>
     }
