--- a/Web/GreenCap.Web/Views/Forum/Create.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Create.cshtml
@@ -3,9 +3,17 @@
 @using GreenCap.Data.Models.Enums
 @model PostInputViewModel
 
-@{
-    this.ViewData["Title"] = "Create post";
-}
+@{ this.ViewData["Title"] = "Create post"; }
+
+<script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    tinymce.init({
+        selector: "textarea",
+        plugins: [
+            "image paste table link code media"
+        ]
+    });</script>
+
 
 <div class="jumbotron">
     <h1 class="display-3">Do you have something in mind to share? </h1>
