--- a/Web/GreenCap.Web/Views/Forum/Personal.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Personal.cshtml
@@ -7,27 +7,28 @@
 @foreach (var post in Model.Posts)
 {
 <br />
-<div class="card text-white bg-info active">
-    <div class="card-header" id="@post.Id">
-        <u><a href="/Forum/Details?id=@post.Id" class="text-dark">@post.ProblemTitle</a></u>
-        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2" data-vote="0"><span id="disslikesValue_@(post.Id)">@post.DissLikes</span></button>
-        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2" data-vote="1"><span id="likesValue_@(post.Id)">@post.Likes</span></button>
-    </div>
-    <div class="card-body">
-        <p class="card-text">@post.ShortDescription</p>
-        <h4 class="text-dark">
-            @post.CreatorName posted on @post.PostedOn
-            <a class="btn float-right text-dark" href="/Forum/Details?id=@post.Id">
-                <i class="fas fa-info-circle"></i>&nbsp; Comments:&nbsp; @post.CommentsCount
-            </a>
-        </h4>
-    </div>
-</div>
- }
+                <div class="card text-white bg-info active">
+                    <div class="card-header" id="@post.Id">
+                        <u><a href="/Forum/Details?id=@post.Id" class="text-dark">@post.ProblemTitle</a></u>
+                        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2 m-1" data-vote="0"><span id="disslikesValue_@(post.Id)">@post.DissLikes</span></button>
+                        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2 m-1" data-vote="1"><span id="likesValue_@(post.Id)">@post.Likes</span></button>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">@post.ShortDescription</p>
+                        <h4 class="text-dark">
+                            @post.CreatorName posted on: @post.PostedOn
+                            <a class="btn float-right text-dark" href="/Forum/Details?id=@post.Id">
+                                <i class="fas fa-info-circle"></i>&nbsp; Comments:&nbsp; @post.CommentsCount
+                            </a>
+                        </h4>
+                    </div>
+                </div>}
 
-    <partial name="_PagingPartial" model="@Model" />
+<partial name="_PagingPartial" model="@Model" />
 
-    @section Scripts
+<form method="post" id="antiForgeryForm"></form>
+
+@section Scripts
 {
-        <script src="~/js/LikesPost.js"></script>
-    }
+    <script src="~/js/LikesPost.js"></script>
+}
