--- a/Web/GreenCap.Web/Views/Forum/Details.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/Details.cshtml
@@ -1,30 +1,119 @@
 ﻿@using GreenCap.Web.ViewModels.OutputViewModel
-
-@{ this.ViewData["Title"] = "Details "; }
-
 @model PostDetailsOutputViewModel
 
+@{ this.ViewData["Title"] = "Details ";
 
-<div class="card text-white bg-success active">
+    void DisplayComments(int? parentId)
+    {
+        var comments = this.Model.Comments.Where(x => x.ParentId == parentId);
+
+        if (!comments.Any())
+        {
+            return;
+        }
+
+@foreach (var comment in comments)
+{
+<div class="container-fluid mt-100">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card mb-4">
+                <div class="card-header">
+                    <div class="media flex-wrap w-100 align-items-center">
+                        <img src="" class="img-circle avatar" alt="">
+                        <div class="media-body ml-3">
+                            @comment.CreatorName
+                            <div class="text-muted small">
+                                <p>@comment.PostedOn</p>
+                            </div>
+                        </div>
+                        <div class="text-muted small ml-3">
+                            @if (this.User.Identity.IsAuthenticated)
+                            {
+                                <button type="button" class="btn btn-secondary btn-sm" onclick="showAddCommentForm(@comment.Id)"><i class="fa fa-plus"></i>&nbsp; click to answer</button>
+
+                                <div class="container">
+                                    <a class="btn btn-secondary float-right text-dark btn-sm m-1" href="/Comments/Edit?id=@Model.Id">Edit</a>
+                                    <a class="btn btn-danger float-right text-dark btn-sm m-1" href="/Comments/Delete?id=@Model.Id">Delete</a>
+                                </div>}
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="container">
+                        <a class="btn btn-secondary float-right text-dark btn-sm m-1" href="/Comments/Edit?id=@Model.Id">Edit</a>
+                        <a class="btn btn-danger float-right text-dark btn-sm m-1" href="/Comments/Delete?id=@Model.Id">Delete</a>
+                    </div>
+                    <article>
+                        @Html.Raw(comment.SanitizedContent)
+                    </article>
+                    <hr />
+                    @{ DisplayComments(comment.Id); }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>} } }
+
+<script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    tinymce.init({
+        selector: "textarea",
+        plugins: [
+            "image paste table link code media"
+        ]
+    });</script>
+
+<div class="card text-white bg-dark active">
     <div class="card-header" id="@Model.Id">
         <br />
-        <h1 class="text-dark">@Model.ProblemTitle</h1>
-        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2 m-1" data-vote="0"><span id="disslikesValue_@(Model.Id)">@Model.DissLikes</span></button>
-        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2 m-1" data-vote="1"><span id="likesValue_@(Model.Id)">@Model.Likes</span></button>
+        <h1 class="text-light display-4">@Model.ProblemTitle (@Model.CategoryName)</h1>
+        <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2 m-2 btn-lg" data-vote="0">&nbsp;&nbsp;<span id="disslikesValue_@(Model.Id)">@Model.DissLikes</span></button>
+        <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2 m-2 btn-lg" data-vote="1">&nbsp;&nbsp;<span id="likesValue_@(Model.Id)">@Model.Likes</span></button>
     </div>
     <div class="card-body">
-        <p class="card-text">@Html.Raw(@Model.SanitizedDescription)</p>
-        <h4 class="text-dark">
-            @Model.CreatorName posted on: @Model.PostedOn
-            <a class="btn float-right text-dark" href="/Forum/Delete?id=@Model.Id"></a>
-            <a class="btn float-right text-dark" href="/Forum/Delete?id=@Model.Id"></a>
-        </h4>
+        <p class="text-dark">@Html.Raw(@Model.SanitizedDescription)</p>
+        <h4 class="text-success">Posted by: @Model.CreatorName on @Model.PostedOn</h4>
+        <br />
+        <a class="btn btn-danger float-left text-dark btn-lg m-1" href="/Forum/Delete?id=@Model.Id">Delete</a>
+        <a class="btn btn-secondary float-left text-dark btn-lg m-1" href="/Forum/Edit?id=@Model.Id">Edit</a>
+        <button type="button" class="btn btn-info float-right btn-lg" onclick="showAddCommentForm(0)">Comment (@Model.CommentsCount)</button>
+    </div>
+    <hr />
+    <h5 class="text-secondary">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All comments:</h5>
+    <div class="card-body">
+        @{ DisplayComments(null); }
     </div>
 </div>
+
+
+<div>
+    <form asp-controller="Comments" asp-action="Create" method="post" id="AddCommentForm" style="display: none">
+        <input type="hidden" name="PostId" value="@Model.Id" />
+        <input type="hidden" name="ParentId" value="0" />
+        <div>
+            <label for="Content"></label>
+            <textarea name="Content" id="Content" class="form-control"></textarea>
+        </div>
+        <div>
+            <input type="submit" class="btn btn-info" value="Add comment" />
+        </div>
+    </form>
+</div>
+
 
 <form method="post" id="antiForgeryForm"></form>
 
 @section Scripts
 {
     <script src="~/js/LikesPost.js"></script>
+    <script>
+        function showAddCommentForm(parentId) {
+            $("#AddCommentForm input[name='ParentId']").val(parentId);
+            $("#AddCommentForm").toggle()
+            $([document.documentElement, document.body]).animate({
+                scrollTop: $("#AddCommentForm").offset().top
+            }, 1000);
+        }
+    </script>
 }
