--- a/Web/GreenCap.Web/Views/Forum/All.cshtml
+++ b/Web/GreenCap.Web/Views/Forum/All.cshtml
@@ -9,12 +9,14 @@
 <br />
                 <div class="card text-white bg-info active">
                     <div class="card-header" id="@post.Id">
-                        <u><a href="/Forum/Details?id=@post.Id" class="text-dark">@post.ProblemTitle</a></u>
+                        <u><a href="/Forum/Details?id=@post.Id" class="text-dark">@post.ProblemTitle</a></u>  
+                        @if (post.UserEmail == this.User.Identity.Name)
+                        {<a>(Personal)</a>}
                         <button type="button" class="btn btn-danger fas fa-thumbs-down float-right p-xl-2 m-1" data-vote="0">&nbsp;<span id="disslikesValue_@(post.Id)">@post.DissLikes</span></button>
                         <button type="button" class="btn btn-success fas fa-thumbs-up float-right p-xl-2 m-1" data-vote="1">&nbsp;<span id="likesValue_@(post.Id)">@post.Likes</span></button>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">@post.ShortDescription</p>
+                        <p class="card-text">@Html.Raw(post.ShortDescriptionSanitized)</p>
                         <h4 class="text-dark">
                             @post.CreatorName posted on: @post.PostedOn
                             <a class="btn float-right text-dark" href="/Forum/Details?id=@post.Id">
