--- a/Web/GreenCap.Web/Views/Proposals/Details.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/Details.cshtml
@@ -10,59 +10,62 @@
     <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
         <!--Indicators-->
         <ol class="carousel-indicators">
-            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-2" data-slide-to="1"></li>
-            <li data-target="#carousel-example-2" data-slide-to="2"></li>
+            @for (int i = 0; i < Model.Images.Count; i++)
+            {
+                <li data-target="#carousel-example-2" data-slide-to="@i" class="active"></li>
+            }
+            
         </ol>
         <!--/.Indicators-->
         <!--Slides-->
         <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-                <div class="view">
-                    <img class="d-block w-100" src="@Model.Image"
-                         alt="First slide">
-                    <div class="mask rgba-black-light"></div>
-                </div>
-                <div class="carousel-caption">
-                    <h3 class="h3-responsive">Light mask</h3>
-                    <p>First text</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
-                         alt="Second slide">
-                    <div class="mask rgba-black-strong"></div>
-                </div>
-                <div class="carousel-caption">
-                    <h3 class="h3-responsive">Strong mask</h3>
-                    <p>Secondary text</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
-                         alt="Third slide">
-                    <div class="mask rgba-black-slight"></div>
-                </div>
-                <div class="carousel-caption">
-                    <h3 class="h3-responsive">Slight mask</h3>
-                    <p>Third text</p>
-                </div>
-            </div>
+            @if (Model.Images.Count >= 1)
+            {
+    <div class="carousel-item active">
+        <div class="view">
+            <img class="rounded mx-auto d-block" src="@Model.Images[0]"
+                 alt="First slide">
+            <div class="mask rgba-black-light"></div>
+        </div>
+    </div>}
+
+            @if (Model.Images.Count >= 2)
+            {
+    <div class="carousel-item">
+        <!--Mask color-->
+        <div class="view">
+            <img class="rounded mx-auto d-block" src="@Model.Images[1]"
+                 alt="Second slide">
+            <div class="mask rgba-black-strong"></div>
+        </div>
+    </div>}
+
+            @if (Model.Images.Count >= 3)
+            {
+    <div class="carousel-item">
+        <!--Mask color-->
+        <div class="view">
+            <img class="rounded mx-auto d-block" src="@Model.Images[2]"
+                 alt="Third slide">
+            <div class="mask rgba-black-slight"></div>
+        </div>
+    </div>            }
+
         </div>
         <!--/.Slides-->
         <!--Controls-->
-        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        @if (Model.Images.Count > 1)
+        {
+            <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+               <span class="carousel-control-next-icon" aria-hidden="true"></span>
+               <span class="sr-only">Next</span>
+            </a>
+         }
+
         <!--/.Controls-->
     </div>
     <!--/.Carousel Wrapper-->
@@ -88,7 +91,7 @@
     <p class="lead">Last modified on: @Model.ModifiedOn</p>
     <hr class="my-4">
     <p class="card-body">@Model.Description</p>
-    @if (Model.CreatedByName == this.User.Identity.Name)
+    @if (Model.UserEmail == this.User.Identity.Name)
     {
 <p class="lead">
     <a class="btn btn-secondary btn-lg" href="/Proposals/Edit?id=@Model.Id" role="button">Edit</a>
